# UFS_UTILS

./: CMakeLists.txt  NOTES.txt
sorc/cdo_remap.fd/: README  cdo_remap.sh  variable.file
sorc/esmf_remap.fd/: CMakeLists.txt  esmf_remap.F90  remap.F90  run_esmf_remap.py  variables.F90
sorc/esmf_remap.fd/esmf_remap/: CMakeLists.txt  esmf_remap.F90  io.F90  main.F90  namelist.F90  netcdf.F90  remap.F90  variables.F90
sorc/esmf_remap.fd/parm/: README.md  ice_variables.yaml  nml.jinja2  ocean_variables.yaml
sorc/ocean_merge.fd/: CMakeLists.txt  build.sh  kinds.F90  merge.F90  namelist.F90  ocean_merge.F90  variables.F90
tests/: CMakeLists.txt
tests/ocean_merge/: CMakeLists.txt  ftst_read_namelist.F90
